--- a/Section 3.6.html
+++ b/Section 3.6.html
@@ -13137,7 +13137,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Finding-eigenvalues-and-eigenvectors-numerically">Finding eigenvalues and eigenvectors numerically<a class="anchor-link" href="#Finding-eigenvalues-and-eigenvectors-numerically">&#182;</a></h3><p>Notice the small rounding errors</p>
+<h3 id="1.-Finding-eigenvalues-and-eigenvectors-numerically">1. Finding eigenvalues and eigenvectors numerically<a class="anchor-link" href="#1.-Finding-eigenvalues-and-eigenvectors-numerically">&#182;</a></h3><p>Notice the small rounding errors</p>
 
 </div>
 </div>
@@ -13249,7 +13249,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Find-eigenvalues-and-eigenvectors-symbolically">Find eigenvalues and eigenvectors symbolically<a class="anchor-link" href="#Find-eigenvalues-and-eigenvectors-symbolically">&#182;</a></h3><p>Notice that Sage doesn't automatrically know that it should simplfy.  You need to tell is using <code>(your_matrix_here).simplify_full()</code></p>
+<h3 id="2.-Find-eigenvalues-and-eigenvectors-symbolically">2. Find eigenvalues and eigenvectors symbolically<a class="anchor-link" href="#2.-Find-eigenvalues-and-eigenvectors-symbolically">&#182;</a></h3><p>Notice that Sage doesn't automatrically know that it should simplfy.  You need to tell is using <code>(your_matrix_here).simplify_full()</code></p>
 
 </div>
 </div>
@@ -13379,7 +13379,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Finding-eigenvalues-and-eigenvectors-using-field-extensions">Finding eigenvalues and eigenvectors using field extensions<a class="anchor-link" href="#Finding-eigenvalues-and-eigenvectors-using-field-extensions">&#182;</a></h3><p>I cannot fully explain this without going into material from Abstract Algebra, but when you do it this way Sage always simplifies.</p>
+<h3 id="3.-Finding-eigenvalues-and-eigenvectors-using-field-extensions">3. Finding eigenvalues and eigenvectors using field extensions<a class="anchor-link" href="#3.-Finding-eigenvalues-and-eigenvectors-using-field-extensions">&#182;</a></h3><p>I cannot fully explain this without going into material from Abstract Algebra, but when you do it this way Sage always simplifies.</p>
 
 </div>
 </div>
